Fixed crawling bugs